--- a/index.html
+++ b/index.html
@@ -388,6 +388,50 @@
         </div>
     </section>
 
+    <section class="review">
+        <div class="container">
+            <h2 class="title">Отзывы клиентов</h2>
+            <div class="review__wrapper">
+                <div class="review__first">
+                    <div class="review__photo"><img src="icons/client1.png" alt=""></div>
+                    <div class="review__content">
+                        <div class="review__name">Ирина Иванченко</div>
+                        <div class="review__subtitle">2 полумарафона</div>
+                        <div class="review__comment">
+                            Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br>
+                            <br>Новые цели - новый гаджет! <br>
+                            <br>Спасибо, RunSmart! 
+                        </div>
+                    </div>
+                </div>
+                <div class="review__second">
+                    <div class="review__photo"><img src="icons/client2.png" alt=""></div>
+                    <div class="review__content">
+                        <div class="review__name">Ирина Иванченко</div>
+                        <div class="review__subtitle">1 полумарафон</div>
+                        <div class="review__comment">
+                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>
+                            <br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br>
+                            <br>С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+                <div class="review__third">
+                    <div class="review__photo"><img src="icons/client3.png" alt=""></div>
+                    <div class="review__content">
+                        <div class="review__name">Юлия Дашкина</div>
+                        <div class="review__subtitle">2 полумарафона</div>
+                        <div class="review__comment">
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. <br>
+                            <br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться! <br>
+                            <br>Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
