--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
-                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                    <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
 
@@ -136,7 +136,7 @@
 
     <section class="catalog">
         <div class="container">
-            <h2 class="title">Каталог пульсометров</h2>
+            <h2 class="title" id="catalog">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
                 <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                 <li class="catalog__tab"><div>для бега</div></li>
