--- a/index.html
+++ b/index.html
@@ -432,6 +432,12 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <!-- <div class="footer__map"></div> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5328.680524691371!2d37.88752271797398!3d55.70267983308033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1857ca5fdf4b480c!2z0J7QntCeICog0JLQmNCi0JAqINCw0L_RgtC10LrQsA!5e0!3m2!1sru!2sru!4v1630005771764!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="footer__info"></div>
+    </footer>
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
