--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -472,8 +472,11 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
             </form> 
         </div>
-
     </div>
+
+    <a href="#up" class="pageup">
+    <img src="icons/up.svg" alt="up">
+    </a>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
